Proyecto_Ramos_Morales/AnalizadorSintactico.output
Terminals unused in grammar

   BREAK
   BOOLEANO
   BracketO
   BracketC
   IGUAL


State 18 conflicts: 14 shift/reduce
State 34 conflicts: 7 shift/reduce
State 36 conflicts: 14 shift/reduce
State 47 conflicts: 14 shift/reduce
State 68 conflicts: 7 shift/reduce
State 146 conflicts: 14 shift/reduce
State 155 conflicts: 7 shift/reduce
State 163 conflicts: 6 shift/reduce
State 172 conflicts: 6 shift/reduce
State 175 conflicts: 6 shift/reduce


Grammar

    0 $accept: program $end

    1 program: MAIN OP CP KEYOLlave comandos KEYCLlave metodo
    2        | MAIN OP declaration CP KEYOLlave comandos KEYCLlave metodo
    3        | MAIN OP CP KEYOLlave comandos metodo comandos KEYCLlave metodo
    4        | MAIN OP declaration CP KEYOLlave comandos metodo comandos KEYCLlave metodo
    5        | error

    6 metodo: %empty
    7       | lista_tipo ID OP CP KEYOLlave comandos KEYCLlave metodo
    8       | lista_tipo ID OP CP KEYOLlave comandos metodo comandos KEYCLlave metodo
    9       | lista_tipo ID OP declaration CP KEYOLlave comandos KEYCLlave metodo
   10       | error

   11 lista_tipo: INT_TYPE
   12           | FLOAT_TYPE
   13           | STRING_TYPE
   14           | LETRA_TYPE
   15           | BOOL_TYPE

   16 comandos: command_list

   17 command_list: KEYOLlave command_list KEYCLlave
   18             | command command_list
   19             | %empty

   20 command: comando_simple FinCommand
   21        | bucle
   22        | error

   23 bucle: controlF
   24      | controlFor
   25      | controlWhile
   26      | controlDo
   27      | controlWhileDo

   28 comando_simple: PRINT STRING
   29               | RETURN
   30               | attrib
   31               | declaration

   32 controlF: IF OP l_expr CP KEYOLlave comandos KEYCLlave controlElse

   33 controlElse: %empty
   34            | ELSE KEYOLlave comandos KEYCLlave

   35 controlFor: FOR OP ffirst FinCommand l_expr FinCommand fthird CP KEYOLlave comandos KEYCLlave

   36 ffirst: %empty
   37       | attrib_list

   38 fthird: %empty
   39       | comando_simple COMA fthird
   40       | comando_simple

   41 controlWhile: WHILE OP l_expr CP KEYOLlave comandos KEYCLlave

   42 controlDo: DO KEYOLlave comandos KEYCLlave WHILE OP l_expr CP FinCommand

   43 controlWhileDo: WHILE OP l_expr CP DO KEYOLlave comandos KEYCLlave

   44 declaration: INT_TYPE ASIGNACION ID
   45            | FLOAT_TYPE ASIGNACION ID
   46            | STRING_TYPE ASIGNACION ID
   47            | LETRA_TYPE ASIGNACION ID
   48            | BOOL_TYPE ASIGNACION ID

   49 attrib_list: attrib ',' attrib_list
   50            | attrib

   51 attrib: i_attrib
   52       | ID INCREMENTO
   53       | ID DECREMENTO
   54       | ID '=' ID
   55       | error

   56 i_attrib: ID '=' g_expr
   57         | ID '=' t_expr
   58         | ID '=' c_expr

   59 t_expr: STRING

   60 c_expr: CARACTER

   61 l_expr: l_expr IGUAL_IGUAL l_factor
   62       | l_expr AND l_factor
   63       | l_expr OR l_factor
   64       | l_expr MAYOR_QUE l_factor
   65       | l_expr MENOR_QUE l_factor
   66       | NOT l_expr
   67       | l_factor

   68 l_factor: OP l_expr OP
   69         | ENTERO
   70         | FLOTANTE
   71         | ID

   72 g_expr: g_expr '+' g_term
   73       | g_expr '-' g_term
   74       | g_term

   75 g_term: g_term '*' g_factor
   76       | g_term '/' g_factor
   77       | g_factor

   78 g_factor: OP g_expr OP
   79         | ENTERO
   80         | FLOTANTE


Terminals, with rules where they appear

$end (0) 0
'*' (42) 75
'+' (43) 72
',' (44) 49
'-' (45) 73
'/' (47) 76
'=' (61) 54 56 57 58
error (256) 5 10 22 55
MAIN (258) 1 2 3 4
IF (259) 32
ELSE (260) 34
DO (261) 42 43
WHILE (262) 41 42 43
FOR (263) 35
BREAK (264)
PRINT (265) 28
RETURN (266) 29
INT_TYPE (267) 11 44
FLOAT_TYPE (268) 12 45
LETRA_TYPE (269) 14 47
STRING_TYPE (270) 13 46
BOOL_TYPE (271) 15 48
CARACTER (272) 60
STRING (273) 28 59
ENTERO (274) 69 79
FLOTANTE (275) 70 80
BOOLEANO (276)
ID (277) 7 8 9 44 45 46 47 48 52 53 54 56 57 58 71
INCREMENTO (278) 52
DECREMENTO (279) 53
IGUAL_IGUAL (280) 61
MENOR_QUE (281) 65
MAYOR_QUE (282) 64
AND (283) 62
OR (284) 63
NOT (285) 66
KEYOLlave (286) 1 2 3 4 7 8 9 17 32 34 35 41 42 43
KEYCLlave (287) 1 2 3 4 7 8 9 17 32 34 35 41 42 43
OP (288) 1 2 3 4 7 8 9 32 35 41 42 43 68 78
CP (289) 1 2 3 4 7 8 9 32 35 41 42 43
BracketO (290)
BracketC (291)
IGUAL (292)
ASIGNACION (293) 44 45 46 47 48
COMA (294) 39
FinCommand (295) 20 35 42


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1 2 3 4 5, on right: 0
metodo (49)
    on left: 6 7 8 9 10, on right: 1 2 3 4 7 8 9
lista_tipo (50)
    on left: 11 12 13 14 15, on right: 7 8 9
comandos (51)
    on left: 16, on right: 1 2 3 4 7 8 9 32 34 35 41 42 43
command_list (52)
    on left: 17 18 19, on right: 16 17 18
command (53)
    on left: 20 21 22, on right: 18
bucle (54)
    on left: 23 24 25 26 27, on right: 21
comando_simple (55)
    on left: 28 29 30 31, on right: 20 39 40
controlF (56)
    on left: 32, on right: 23
controlElse (57)
    on left: 33 34, on right: 32
controlFor (58)
    on left: 35, on right: 24
ffirst (59)
    on left: 36 37, on right: 35
fthird (60)
    on left: 38 39 40, on right: 35 39
controlWhile (61)
    on left: 41, on right: 25
controlDo (62)
    on left: 42, on right: 26
controlWhileDo (63)
    on left: 43, on right: 27
declaration (64)
    on left: 44 45 46 47 48, on right: 2 4 9 31
attrib_list (65)
    on left: 49 50, on right: 37 49
attrib (66)
    on left: 51 52 53 54 55, on right: 30 49 50
i_attrib (67)
    on left: 56 57 58, on right: 51
t_expr (68)
    on left: 59, on right: 57
c_expr (69)
    on left: 60, on right: 58
l_expr (70)
    on left: 61 62 63 64 65 66 67, on right: 32 35 41 42 43 61 62 63
    64 65 66 68
l_factor (71)
    on left: 68 69 70 71, on right: 61 62 63 64 65 67
g_expr (72)
    on left: 72 73 74, on right: 56 72 73 78
g_term (73)
    on left: 75 76 77, on right: 72 73 74 75 76
g_factor (74)
    on left: 78 79 80, on right: 75 76 77


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    MAIN   shift, and go to state 2

    program  go to state 3


State 1

    5 program: error .

    $default  reduce using rule 5 (program)


State 2

    1 program: MAIN . OP CP KEYOLlave comandos KEYCLlave metodo
    2        | MAIN . OP declaration CP KEYOLlave comandos KEYCLlave metodo
    3        | MAIN . OP CP KEYOLlave comandos metodo comandos KEYCLlave metodo
    4        | MAIN . OP declaration CP KEYOLlave comandos metodo comandos KEYCLlave metodo

    OP  shift, and go to state 4


State 3

    0 $accept: program . $end

    $end  shift, and go to state 5


State 4

    1 program: MAIN OP . CP KEYOLlave comandos KEYCLlave metodo
    2        | MAIN OP . declaration CP KEYOLlave comandos KEYCLlave metodo
    3        | MAIN OP . CP KEYOLlave comandos metodo comandos KEYCLlave metodo
    4        | MAIN OP . declaration CP KEYOLlave comandos metodo comandos KEYCLlave metodo

    INT_TYPE     shift, and go to state 6
    FLOAT_TYPE   shift, and go to state 7
    LETRA_TYPE   shift, and go to state 8
    STRING_TYPE  shift, and go to state 9
    BOOL_TYPE    shift, and go to state 10
    CP           shift, and go to state 11

    declaration  go to state 12


State 5

    0 $accept: program $end .

    $default  accept


State 6

   44 declaration: INT_TYPE . ASIGNACION ID

    ASIGNACION  shift, and go to state 13


State 7

   45 declaration: FLOAT_TYPE . ASIGNACION ID

    ASIGNACION  shift, and go to state 14


State 8

   47 declaration: LETRA_TYPE . ASIGNACION ID

    ASIGNACION  shift, and go to state 15


State 9

   46 declaration: STRING_TYPE . ASIGNACION ID

    ASIGNACION  shift, and go to state 16


State 10

   48 declaration: BOOL_TYPE . ASIGNACION ID

    ASIGNACION  shift, and go to state 17


State 11

    1 program: MAIN OP CP . KEYOLlave comandos KEYCLlave metodo
    3        | MAIN OP CP . KEYOLlave comandos metodo comandos KEYCLlave metodo

    KEYOLlave  shift, and go to state 18


State 12

    2 program: MAIN OP declaration . CP KEYOLlave comandos KEYCLlave metodo
    4        | MAIN OP declaration . CP KEYOLlave comandos metodo comandos KEYCLlave metodo

    CP  shift, and go to state 19


State 13

   44 declaration: INT_TYPE ASIGNACION . ID

    ID  shift, and go to state 20


State 14

   45 declaration: FLOAT_TYPE ASIGNACION . ID

    ID  shift, and go to state 21


State 15

   47 declaration: LETRA_TYPE ASIGNACION . ID

    ID  shift, and go to state 22


State 16

   46 declaration: STRING_TYPE ASIGNACION . ID

    ID  shift, and go to state 23


State 17

   48 declaration: BOOL_TYPE ASIGNACION . ID

    ID  shift, and go to state 24


State 18

    1 program: MAIN OP CP KEYOLlave . comandos KEYCLlave metodo
    3        | MAIN OP CP KEYOLlave . comandos metodo comandos KEYCLlave metodo

    error        shift, and go to state 25
    IF           shift, and go to state 26
    DO           shift, and go to state 27
    WHILE        shift, and go to state 28
    FOR          shift, and go to state 29
    PRINT        shift, and go to state 30
    RETURN       shift, and go to state 31
    INT_TYPE     shift, and go to state 6
    FLOAT_TYPE   shift, and go to state 7
    LETRA_TYPE   shift, and go to state 8
    STRING_TYPE  shift, and go to state 9
    BOOL_TYPE    shift, and go to state 10
    ID           shift, and go to state 32
    KEYOLlave    shift, and go to state 33

    error        [reduce using rule 19 (command_list)]
    IF           [reduce using rule 19 (command_list)]
    DO           [reduce using rule 19 (command_list)]
    WHILE        [reduce using rule 19 (command_list)]
    FOR          [reduce using rule 19 (command_list)]
    PRINT        [reduce using rule 19 (command_list)]
    RETURN       [reduce using rule 19 (command_list)]
    INT_TYPE     [reduce using rule 19 (command_list)]
    FLOAT_TYPE   [reduce using rule 19 (command_list)]
    LETRA_TYPE   [reduce using rule 19 (command_list)]
    STRING_TYPE  [reduce using rule 19 (command_list)]
    BOOL_TYPE    [reduce using rule 19 (command_list)]
    ID           [reduce using rule 19 (command_list)]
    KEYOLlave    [reduce using rule 19 (command_list)]
    KEYCLlave    reduce using rule 19 (command_list)

    comandos        go to state 34
    command_list    go to state 35
    command         go to state 36
    bucle           go to state 37
    comando_simple  go to state 38
    controlF        go to state 39
    controlFor      go to state 40
    controlWhile    go to state 41
    controlDo       go to state 42
    controlWhileDo  go to state 43
    declaration     go to state 44
    attrib          go to state 45
    i_attrib        go to state 46


State 19

    2 program: MAIN OP declaration CP . KEYOLlave comandos KEYCLlave metodo
    4        | MAIN OP declaration CP . KEYOLlave comandos metodo comandos KEYCLlave metodo

    KEYOLlave  shift, and go to state 47


State 20

   44 declaration: INT_TYPE ASIGNACION ID .

    $default  reduce using rule 44 (declaration)


State 21

   45 declaration: FLOAT_TYPE ASIGNACION ID .

    $default  reduce using rule 45 (declaration)


State 22

   47 declaration: LETRA_TYPE ASIGNACION ID .

    $default  reduce using rule 47 (declaration)


State 23

   46 declaration: STRING_TYPE ASIGNACION ID .

    $default  reduce using rule 46 (declaration)


State 24

   48 declaration: BOOL_TYPE ASIGNACION ID .

    $default  reduce using rule 48 (declaration)


State 25

   22 command: error .
   55 attrib: error .

    FinCommand  reduce using rule 55 (attrib)
    $default    reduce using rule 22 (command)


State 26

   32 controlF: IF . OP l_expr CP KEYOLlave comandos KEYCLlave controlElse

    OP  shift, and go to state 48


State 27

   42 controlDo: DO . KEYOLlave comandos KEYCLlave WHILE OP l_expr CP FinCommand

    KEYOLlave  shift, and go to state 49


State 28

   41 controlWhile: WHILE . OP l_expr CP KEYOLlave comandos KEYCLlave
   43 controlWhileDo: WHILE . OP l_expr CP DO KEYOLlave comandos KEYCLlave

    OP  shift, and go to state 50


State 29

   35 controlFor: FOR . OP ffirst FinCommand l_expr FinCommand fthird CP KEYOLlave comandos KEYCLlave

    OP  shift, and go to state 51


State 30

   28 comando_simple: PRINT . STRING

    STRING  shift, and go to state 52


State 31

   29 comando_simple: RETURN .

    $default  reduce using rule 29 (comando_simple)


State 32

   52 attrib: ID . INCREMENTO
   53       | ID . DECREMENTO
   54       | ID . '=' ID
   56 i_attrib: ID . '=' g_expr
   57         | ID . '=' t_expr
   58         | ID . '=' c_expr

    INCREMENTO  shift, and go to state 53
    DECREMENTO  shift, and go to state 54
    '='         shift, and go to state 55


State 33

   17 command_list: KEYOLlave . command_list KEYCLlave

    error        shift, and go to state 25
    IF           shift, and go to state 26
    DO           shift, and go to state 27
    WHILE        shift, and go to state 28
    FOR          shift, and go to state 29
    PRINT        shift, and go to state 30
    RETURN       shift, and go to state 31
    INT_TYPE     shift, and go to state 6
    FLOAT_TYPE   shift, and go to state 7
    LETRA_TYPE   shift, and go to state 8
    STRING_TYPE  shift, and go to state 9
    BOOL_TYPE    shift, and go to state 10
    ID           shift, and go to state 32
    KEYOLlave    shift, and go to state 33

    KEYCLlave  reduce using rule 19 (command_list)

    command_list    go to state 56
    command         go to state 36
    bucle           go to state 37
    comando_simple  go to state 38
    controlF        go to state 39
    controlFor      go to state 40
    controlWhile    go to state 41
    controlDo       go to state 42
    controlWhileDo  go to state 43
    declaration     go to state 44
    attrib          go to state 45
    i_attrib        go to state 46


State 34

    1 program: MAIN OP CP KEYOLlave comandos . KEYCLlave metodo
    3        | MAIN OP CP KEYOLlave comandos . metodo comandos KEYCLlave metodo

    error        shift, and go to state 57
    INT_TYPE     shift, and go to state 58
    FLOAT_TYPE   shift, and go to state 59
    LETRA_TYPE   shift, and go to state 60
    STRING_TYPE  shift, and go to state 61
    BOOL_TYPE    shift, and go to state 62
    KEYCLlave    shift, and go to state 63

    error        [reduce using rule 6 (metodo)]
    IF           reduce using rule 6 (metodo)
    DO           reduce using rule 6 (metodo)
    WHILE        reduce using rule 6 (metodo)
    FOR          reduce using rule 6 (metodo)
    PRINT        reduce using rule 6 (metodo)
    RETURN       reduce using rule 6 (metodo)
    INT_TYPE     [reduce using rule 6 (metodo)]
    FLOAT_TYPE   [reduce using rule 6 (metodo)]
    LETRA_TYPE   [reduce using rule 6 (metodo)]
    STRING_TYPE  [reduce using rule 6 (metodo)]
    BOOL_TYPE    [reduce using rule 6 (metodo)]
    ID           reduce using rule 6 (metodo)
    KEYOLlave    reduce using rule 6 (metodo)
    KEYCLlave    [reduce using rule 6 (metodo)]

    metodo      go to state 64
    lista_tipo  go to state 65


State 35

   16 comandos: command_list .

    $default  reduce using rule 16 (comandos)


State 36

   18 command_list: command . command_list

    error        shift, and go to state 25
    IF           shift, and go to state 26
    DO           shift, and go to state 27
    WHILE        shift, and go to state 28
    FOR          shift, and go to state 29
    PRINT        shift, and go to state 30
    RETURN       shift, and go to state 31
    INT_TYPE     shift, and go to state 6
    FLOAT_TYPE   shift, and go to state 7
    LETRA_TYPE   shift, and go to state 8
    STRING_TYPE  shift, and go to state 9
    BOOL_TYPE    shift, and go to state 10
    ID           shift, and go to state 32
    KEYOLlave    shift, and go to state 33

    error        [reduce using rule 19 (command_list)]
    IF           [reduce using rule 19 (command_list)]
    DO           [reduce using rule 19 (command_list)]
    WHILE        [reduce using rule 19 (command_list)]
    FOR          [reduce using rule 19 (command_list)]
    PRINT        [reduce using rule 19 (command_list)]
    RETURN       [reduce using rule 19 (command_list)]
    INT_TYPE     [reduce using rule 19 (command_list)]
    FLOAT_TYPE   [reduce using rule 19 (command_list)]
    LETRA_TYPE   [reduce using rule 19 (command_list)]
    STRING_TYPE  [reduce using rule 19 (command_list)]
    BOOL_TYPE    [reduce using rule 19 (command_list)]
    ID           [reduce using rule 19 (command_list)]
    KEYOLlave    [reduce using rule 19 (command_list)]
    KEYCLlave    reduce using rule 19 (command_list)

    command_list    go to state 66
    command         go to state 36
    bucle           go to state 37
    comando_simple  go to state 38
    controlF        go to state 39
    controlFor      go to state 40
    controlWhile    go to state 41
    controlDo       go to state 42
    controlWhileDo  go to state 43
    declaration     go to state 44
    attrib          go to state 45
    i_attrib        go to state 46


State 37

   21 command: bucle .

    $default  reduce using rule 21 (command)


State 38

   20 command: comando_simple . FinCommand

    FinCommand  shift, and go to state 67


State 39

   23 bucle: controlF .

    $default  reduce using rule 23 (bucle)


State 40

   24 bucle: controlFor .

    $default  reduce using rule 24 (bucle)


State 41

   25 bucle: controlWhile .

    $default  reduce using rule 25 (bucle)


State 42

   26 bucle: controlDo .

    $default  reduce using rule 26 (bucle)


State 43

   27 bucle: controlWhileDo .

    $default  reduce using rule 27 (bucle)


State 44

   31 comando_simple: declaration .

    $default  reduce using rule 31 (comando_simple)


State 45

   30 comando_simple: attrib .

    $default  reduce using rule 30 (comando_simple)


State 46

   51 attrib: i_attrib .

    $default  reduce using rule 51 (attrib)


State 47

    2 program: MAIN OP declaration CP KEYOLlave . comandos KEYCLlave metodo
    4        | MAIN OP declaration CP KEYOLlave . comandos metodo comandos KEYCLlave metodo

    error        shift, and go to state 25
    IF           shift, and go to state 26
    DO           shift, and go to state 27
    WHILE        shift, and go to state 28
    FOR          shift, and go to state 29
    PRINT        shift, and go to state 30
    RETURN       shift, and go to state 31
    INT_TYPE     shift, and go to state 6
    FLOAT_TYPE   shift, and go to state 7
    LETRA_TYPE   shift, and go to state 8
    STRING_TYPE  shift, and go to state 9
    BOOL_TYPE    shift, and go to state 10
    ID           shift, and go to state 32
    KEYOLlave    shift, and go to state 33
